# cargo-tomlfmt

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
.github/workflows/: publish.yml  rust.yml
ci/: before_deploy.ps1  before_deploy.sh
src/: cli.rs  config.rs  fmt.rs  main.rs  re_define.rs
test/fixtures/: features_unsorted.toml  keep_comment.toml  keep_order.toml  non_workspace_array.toml  package_unsorted.toml  value_after_table.toml  workspace_members_inline.toml
