[package]
name = 'cargo-tomlfmt'
version = '0.1.4'
authors = ['tbrand <taichiro0709@gmail.com>']
description = 'Formatting Cargo.toml'
homepage = 'https://github.com/tbrand/cargo-tomlfmt'
license = 'MIT'
repository = 'https://github.com/tbrand/cargo-tomlfmt'
edition = '2021'

[[bin]]
name = 'cargo-tomlfmt'
path = 'src/main.rs'

[dependencies]
anyhow = "1.0.81"
clap = { version = '4.5.4', features = ['cargo', 'derive'] }
env_logger = '0.11.3'
log = "0.4.21"
toml_edit = "0.18.0"
