[package]
name = 'cargo-tomlfmt'
version = '0.2.0'
authors = ['tbrand <taichiro0709@gmail.com>']
description = 'Formatting Cargo.toml'
homepage = 'https://github.com/tbrand/cargo-tomlfmt'
license = 'MIT'
repository = 'https://github.com/tbrand/cargo-tomlfmt'
edition = '2021'

[[bin]]
name = 'cargo-tomlfmt'
path = 'src/main.rs'

[dependencies]
clap = { version = "4.5.57", features = ["cargo"] }
env_logger = "0.11.8"
log = "0.4.29"
toml_edit = "0.24.0+spec-1.1.0"
